--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -29,10 +29,14 @@
                 <label for="switch-search" class="mb-0 hamber"><i class="bi bi-search hamber-i"></i></label><!--漢堡按鈕圖示-->
                 <input type="checkbox" id="switch-search" class="d-none" style="position: absolute; top: 0; left: 0;">
                 <div class="search-menu">
-                    <form class="form-inline my-2 my-lg-0 flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="post">
+                    <form class="form-inline my-2 my-lg-0 flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="get">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="name">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
+                    @*<form action="~/Home/SearchProduct" method="get">
+                        <input type="text" name="keyword" placeholder="搜索商品">
+                        <button type="submit">搜索</button>
+                    </form>*@
                 </div>
             </div>
             <partial name="_LoginStatusPartial" />
@@ -48,7 +52,7 @@
         
         <div class="container-footer">
             <div class="container">
-                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Index">隱私中心</a>
             </div>
             @if (User.Identity.IsAuthenticated)
             {
