--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHomePage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHomePage.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<CoreMVC5_UsedBookProject.Models.AdministratorUser>
+@{
     ViewData["Title"] = "管理員控制中心";
 }
 
@@ -13,36 +14,30 @@
     <h2>你好: @username 歡迎來到管理員控制中心</h2>
 }
 
-<style>
-    .carousel-item img {
-        object-fit: cover;
-        width: 100%;
-        height: 600px; /* 設定圖片的高度，可以根據需求自行調整 */
-    }
-</style>
-
-<div id="carouselExample" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="~/adminimg/柴犬.jpg" class="d-block w-100" alt="Slide 1">
-        </div>
-        <div class="carousel-item">
-            <img src="~/adminimg/黃金獵犬.jpg" class="d-block w-100" alt="Slide 2">
-        </div>
-        <div class="carousel-item">
-            <img src="~/adminimg/邊境牧羊犬.jpg" class="d-block w-100" alt="Slide 3">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<button id="uploadButton" class="btn btn-primary">上傳圖片</button>
-<button id="deleteButton" class="btn btn-danger">刪除圖片</button>
-<button id="saveButton" class="btn btn-success">保存變更</button>
+<table class="table table-striped table-bordered table-hover">
+    <thead>
+        <caption>管理員資料列表</caption>
+        <tr>
+            <th colspan="3" class="text-center btn-info">管理員資料列表</th>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(m => m.Name)</th>
+            <th>@Html.DisplayNameFor(m => m.Nickname)</th>
+            <th>資料變更</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var m in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(x => m.Name)</td>
+                <td>@Html.DisplayFor(x => m.Nickname)</td>
+                <td>
+                    <a asp-action="AdminEdit" asp-route-itemid="@m.Id" class="btn btn-info">編輯</a>
+                    <a asp-action="AdminDetails" asp-route-itemid="@m.Id" class="btn btn-primary">詳細資料</a>
+                    <a asp-action="AdminDelete" asp-route-itemid="@m.Id" class="btn btn-danger">刪除</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
