--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHomePage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdministratorHomePage.cshtml
@@ -16,7 +16,6 @@
 
 <table class="table table-striped table-bordered table-hover">
     <thead>
-        <caption>管理員資料列表</caption>
         <tr>
             <th colspan="3" class="text-center btn-info">管理員資料列表</th>
         </tr>
@@ -33,11 +32,14 @@
                 <td>@Html.DisplayFor(x => m.Name)</td>
                 <td>@Html.DisplayFor(x => m.Nickname)</td>
                 <td>
-                    <a asp-action="AdminEdit" asp-route-itemid="@m.Id" class="btn btn-info">編輯</a>
-                    <a asp-action="AdminDetails" asp-route-itemid="@m.Id" class="btn btn-primary">詳細資料</a>
-                    <a asp-action="AdminDelete" asp-route-itemid="@m.Id" class="btn btn-danger">刪除</a>
+                    <a asp-action="AdministratorEdit" asp-route-id="@m.Id" class="btn btn-info">編輯</a>
+                    <a asp-action="AdministratorDetail" asp-route-id="@m.Id" class="btn btn-primary">詳細資料</a>
+                    <a asp-action="AdministratorDelete" asp-route-id="@m.Id" class="btn btn-danger">刪除</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<p>
+    <a asp-action="AdministratorCreate" class="btn btn-warning">新增管理員</a>
+</p>
