--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -111,7 +111,12 @@ img {
     width: 200px;
     height: calc(100% - 50px);
     overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
+    .aside-menu::-webkit-scrollbar {
+        display: none;
+    }
 .search-menu {
     position: absolute;
     top: 50px;
