--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -111,11 +111,11 @@ img {
     width: 200px;
     height: calc(100% - 50px);
     overflow-y: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
 }
     .aside-menu::-webkit-scrollbar {
-        display: none;
+        display: none; /* Safari and Chrome */
     }
 .search-menu {
     position: absolute;
