--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     </div>
                     <div class="d-flex align-items-center justify-content-center px-1">
                         <div class="aside-menu">
-                            <partial name="_AsidePartial"></partial>
+                            <partial name="_NavItemPartial"></partial>
                         </div>
                     </div>
                 </div>
