--- a/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
@@ -29,7 +29,6 @@
         color: #87cefa;
         cursor: default;
         background-color: #ffffe0;
-        min-width: 1100px;
         margin-top: 30px;
         border-radius: 5px;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
@@ -117,7 +116,7 @@
     <div style="width: 35%;"></div>
     <div class="container" style="display:flex; width:auto;">
         <div class="row">
-            <div class="content">
+            <div class="content" style="width:100%;">
                 <h1>管理員控制中心</h1>
 
                 @if (User.Identity.IsAuthenticated)
@@ -130,10 +129,10 @@
                 }
                 <h4 class="list">管理人員名單</h4>
                 
-                <div style="display:flex; width:1200px; max-width:1200px; flex-wrap:wrap; gap:30px;">
+                <div style="display:flex;flex-wrap:wrap; gap:30px;">
                 @foreach (var Users in Model)
                 {
-                        <div style="width:330px;">
+                        <div>
                             <div class="card-body">
                             @{
                                 string Name = Users.Name;
