--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -27,6 +27,8 @@ h1 {
     justify-content: center;
     cursor: pointer;
     user-select: none;
+    border-radius: 15%;
+    transition: .5s;
 }
 #login:hover {
     background-color: #282B2E;
