--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/MySales.css
@@ -1,7 +1,7 @@
 ﻿.product-card {
     border: 2px solid orange;
-    border-radius: 3%;
-    background-color: #80808050;
+    border-radius: 15px;
+    background-color: #80808025;
 }
 .action{
     width: 100%;
