--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -7,18 +7,20 @@
     <h1>願望清單</h1>
     <div class="row">
         <div class="col-12 col-md-6">
+            <div class="form-group">
+                <label asp-for="ISBN" class="control-label"></label>
+                <input asp-for="ISBN" class="form-control" />
+                <span asp-validation-for="ISBN" class="text-danger"></span>
+            </div>
             <form method="post" enctype="multipart/form-data" action="/Buyer/Wish">
                 <div class="form-group">
                     <label asp-for="Title" class="control-label"></label>
                     <input asp-for="Title" class="form-control" />
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="ISBN" class="control-label"></label>
-                    <input asp-for="ISBN" class="form-control" />
-                    <span asp-validation-for="ISBN" class="text-danger"></span>
-                </div>
+                
                 <button type="submit" class="btn btn-outline-primary mb-2">增至許願井</button>
+                <button onclick="searchByISBN()" type="button">api查詢書籍</button>
             </form>
         </div>
         <div class="col-12 col-md-6">
@@ -66,5 +68,6 @@
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
 }
 @section endJS{
+    <script src="~/js/home/wish.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
