--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -5,53 +5,68 @@
 }
 <div class="container-fluid">
     <h1>購物車</h1>
-    <div class="row">
-        @if (Model.Products.Count > 0)
-        {
-            @foreach (var item in Model.Products)
-            {
-                <div class="col-12 col-xl-6">
-                    <div class="p-2 product-card">
-                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") class="m-auto w-100" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                        </div>
-                        <div class="container-fluid my-2">
-                            <h2>@item.Title</h2>
-                            <h2>@item.Trade</h2>
-                            @if (item.Trade.Contains("買賣"))
+    <div class="sexyborder">
+        <table class="fancytable">
+            <thead>
+                <tr class="headerrow">
+                    <td style="width: 150px;">圖片封面</td>
+                    <td>書名</td>
+                    @if (ViewBag.Trade == "買賣")
+                    {
+                        <td style="width: 150px;">價格</td>
+                    }
+                    <td style="width: 100px;">操作</td>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model.Products.Count > 0)
+                {
+                    @foreach (var item in Model.Products)
+                    {
+                        <tr>
+                            <td>
+                                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                                </div>
+                            </td>
+                            <td>
+                                <p title="@item.Title" class="text-left">@item.Title</p>
+                            </td>
+                            @if (ViewBag.Trade == "買賣")
                             {
-                                <h2>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h2>
+                                <td>
+                                    <p>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</p>
+                                </td>
                             }
-                            <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
-                            <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
-                            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
-                            {
-                                @if (item.CreateBy == User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value)
-                                {
-                                    <h3 class="text-danger">自己的商品</h3>
-                                }
-                            }
-                            @if (item.Trade.Contains("買賣"))
-                            {
-                                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="btn btn-outline-primary p-3">購買</a>
-                            }
-                            @if (item.Trade.Contains("交換"))
-                            {
-                                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="btn btn-outline-primary p-3">交換</a>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
-        }
-        else
-        {
-            <div class="col-12 col-md-6 col-xl-3">
-                <div class="p-2 product-card">
-                    <h2 class="my-5">購物車是空的</h2>
-                </div>
-            </div>
-        }
+                            <td>
+                                <a href="@Url.Action("Details", "Home", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 詳情</a>
+                                <a href="@Url.Action("DeleteFromShoppingcart", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-danger p-3 my-1"><i class="bi bi-trash"></i> 刪除</a>
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td>
+                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                                <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="Empty" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                            </div>
+                        </td>
+                        <td>
+                            <p title="購物車是空的" class="text-left">購物車是空的</p>
+                        </td>
+                        @if (ViewBag.Trade == "買賣")
+                        {
+                            <td>
+                            </td>
+                        }
+                        <td>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
 @section topCSS{
