--- a/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
@@ -4,35 +4,37 @@
     ViewBag.Title = $"願望清單";
 }
 <div class="container-fluid">
-    <h1>願望清單</h1>
-    <div class="d-flex justify-content-between flex-wrap">
-        @if (Model.Wishs.Count > 0)
-        {
-            @foreach (var item in Model.Wishs)
+    <h1 class="mt-4" style="background-color: #92705A; border-radius: 15px 15px 0 0; width: 170px; margin-bottom: 0; text-align: center;">願望清單</h1>
+    <div class="p-2" style="background-color: #92705A; border-radius: 0 15px 15px 15px;">
+        <div class="row">
+            @if (Model.Wishs.Count > 0)
             {
-                <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
-                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                @foreach (var item in Model.Wishs)
+                {
+                    <div class="col-3 col-xl-2 mt-4">
+                        <div class="product-shop-card m-auto">
+                            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: #A0522D50;">
+                                <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                            </div>
+                            <div class="container-fluid my-2">
+                                <p title="@item.Title">@item.Title</p>
+                                <p title="@item.ISBN">@item.ISBN</p>
+                                <p title="@item.UserName">@item.UserName</p>
+                            </div>
+                        </div>
                     </div>
-                    <table class="container-fluid">
-                        <tr><td>@Html.DisplayNameFor(model => model.Title)</td><td>@item.Title</td></tr>
-                        <tr><td>@Html.DisplayNameFor(model => model.ISBN)</td><td>@item.ISBN</td></tr>
-                        <tr><td>@Html.DisplayNameFor(model => model.UserName)</td><td>@item.UserName</td></tr>
-                    </table>
-                </div>
+                }
             }
-        }
-        else
-        {
-            <div class="p-2 product-card">
-                <h2 class="my-5">願望清單是空的</h2>
-            </div>
-        }
+            else
+            {
+                <h2 class="my-5 text-center w-100" style="color:white;">願望清單是空的</h2>
+            }
+        </div>
     </div>
-    <partial name="_NowPageWishsPartial" />
 </div>
+<partial name="_NowPageWishsPartial" />
 @section topCSS{
-    <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/home/myproducts.css" asp-append-version="true" rel="stylesheet" />
 }
 @section endJS{
    
