--- a/CoreMVC5_UsedBookProject/wwwroot/css/Account/Login.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Account/Login.css
@@ -3,9 +3,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-label, h1 {
+label, h1, .text-danger {
     color: white;
-    text-shadow: 5px 5px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .btn-login-custom {
     display: inline-block;
