--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -18,11 +18,12 @@
                     <input asp-for="Title" class="form-control" />
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
-                
+                <button class="btn btn-outline-primary mb-2" onclick="searchByISBN()" type="button">api查詢書籍</button>
                 <button type="submit" class="btn btn-outline-primary mb-2">增至許願井</button>
-                @*<button onclick="searchByISBN()" type="button">api查詢書籍</button>*@
+               
             </form>
         </div>
+        <div id="resultContainer" class="d-none"></div>
         <div class="col-12 col-md-6">
             <p>進入願望清單後，</p>
             <p>若賣場中有此商品將顯示<span class="text-success">賣場有此商品</span>，</p>
@@ -66,8 +67,10 @@
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 @section endJS{
     <script src="~/js/home/wish.js" asp-append-version="true"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <partial name="_ValidationScriptsPartial" />
 }
