--- a/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
@@ -8,10 +8,42 @@
 }
 <div class="container-fluid">
     <h1>買賣訂單詳情</h1>
-    <form action="~/Buyer/OrderDetails" method="post">
+    <form action="~/Buyer/OrderDetails" method="post"></form>
+    <div class="sexyborder">
+        <table class="fancytable">
+            <thead>
+            <tr class="headerrow"><td style="width: 150px;">上架者</td><td style="width: 150px;">圖片封面</td><td>書名</td><td style="width: 150px;">價格</td><td style="width: 150px;">訂單狀態</td><td style="width: 150px;">操作</td></tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <p class="text-left">@Model.SellerName</p>
+                    </td>
+                    <td>
+                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        </div>
+                    </td>
+                    <td>
+                        <p title="@Model.SellerTitle" class="text-left">@Model.SellerTitle</p>
+                    </td>
+                    <td>
+                    <p title="@Model.SellerUnitPrice" class="text-left">@Model.SellerUnitPrice</p>
+                    </td>
+                <td>
+                    <p title="@Model.Status" class="text-left">@Model.Status</p>
+                </td>
+                    <td>
+                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info p-3 my-1"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+   </div>
+</div>
+
         <div class="container-fluid my-2">
-            <h2>@Model.Trade</h2>
-            <h2>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h2>
+            
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
                 <p>
@@ -29,27 +61,13 @@
             {
                 <p><span>@Html.DisplayNameFor(model => model.DenyReason) </span><span>@Model.DenyReason</span></p>
             }
-            <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
+           
         </div>
-        <div class="d-flex">
-            <div class="w-50">
-                <h2>賣家的商品 @Model.SellerName</h2>
-                <div class="p-2 product-card my-1">
-                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                    </div>
-                    <div class="container-fluid my-2">
-                        <h2>@Model.SellerTitle</h2>
-                        <h3>@Model.Trade</h3>
-                        <h3>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h3>
-                        <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
-                        <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
-                    </div>
-                    <div class="action d-flex justify-content-around align-items-center">
-                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
-                    </div>
-                </div>
-            </div>
+
+       
+            
+                  
+           
             <div class="w-50">
                 <div class="d-flex">
                     @if (Model.Status == "已成立")
@@ -60,14 +78,14 @@
                     }
                     @if (Model.Status == "待確認" || Model.Status == "已成立")
                     {
-                        <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
+                        <button  type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
                     }
-                    <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">返回</button>
+        <button  type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">返回</button>
                 </div>
             </div>
-        </div>
-    </form>
-</div>
+       
+    
+
 @section topCSS{
     <link href="~/css/seller/mysales.css" asp-append-version="true" rel="stylesheet" />
 }
