--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
@@ -58,13 +58,20 @@
         }
 
     .common {
+        padding: 10px;
+        text-decoration: none;
+        color: black;
         background-color: #EFEBE7;
-        padding: 1.3rem 0.75rem;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         font-size: 25px;
     }
 
         .common:hover {
+            color: black;
+            text-decoration: none;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
     .list {
